tests/files/type_checker_tests/should_pass/111.cmdr
//Test that greater than operation type checks
x = 3 > 4.4;
