tests/files/type_checker_tests/should_fail/028.cmdr
//Should fail on greater when types are incompatible
x = 3 > "3";